// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Component renders without crashing 1`] = `
<tbody
  className="bundle"
>
  <Room
    key="3"
    locations={Array []}
    room={
      Object {
        "id": "3",
        "location": "Kampala",
        "locationId": "1",
        "name": "Gulu",
        "office": "The Crest",
      }
    }
  />
</tbody>
`;

exports[`Pagination Component renders without crashing 2`] = `
<tbody
  className="bundle"
>
  <Room
    key="3"
    locations={Array []}
    room={
      Object {
        "id": "3",
        "location": "",
        "locationId": "",
        "name": "Gulu",
        "office": "",
      }
    }
  />
</tbody>
`;
